--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,7 @@ yarn-error.log*
 
 # vercel
 .vercel
+
+# Introspection schema graphql
+src/generated/graphql.schema.json
+src/generated/generated.ts
